Added details page about specific cube

--- a/ExpressJS and Handlebars/Cubicles/src/views/partials/cube.hbs
+++ b/ExpressJS and Handlebars/Cubicles/src/views/partials/cube.hbs
@@ -2,5 +2,5 @@
         <img class="cube" src="{{img}}">
         <p class="name">{{name}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
-        <a class="btn" href="/details/{{id}}">Details</a>
+        <a class="btn" href="/cube/details/{{id}}">Details</a>
       </div>
