--- a/ExpressJS and Handlebars/Cubicles/src/views/partials/cube.hbs
+++ b/ExpressJS and Handlebars/Cubicles/src/views/partials/cube.hbs
@@ -2,5 +2,7 @@
         <img class="cube" src="{{img}}">
         <p class="name">{{name}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
+        <p>Likes : {{likes}}</p>
         <a class="btn" href="/cube/details/{{id}}">Details</a>
+        <a class="btn" href="/cube/like/{{id}}">Like</a>
       </div>
