Adding details page functionality

--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
@@ -1,9 +1,9 @@
 <main>
       <h1>{{cube.name}}</h1>
-      <img class="cube" src="{{cube.img}}">
+      <img class="cube" src="{{cube.imgPath}}">
       <div class="details">
         <p><span>Description:</span> {{cube.description}}</p>
-        <p><span>Difficulty level:</span> {{cube.difficulty}}</p>
+        <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
         <a class="btn" href="/">Back</a>
       </div>
     </main>
