--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
@@ -3,6 +3,6 @@
         <p class="name">{{name}}</p>
         <p><span>Difficulty level:</span> {{difficultyLevel}}</p>
         <p>Likes : {{likes}}</p>
-        <a class="btn" href="/cube/details/{{id}}">Details</a>
-        <a class="btn" href="/cube/like/{{id}}">Like</a>
+        <a class="btn" href="/cube/details/{{_id}}">Details</a>
+        <a class="btn" href="/cube/like/{{_id}}">Like</a>
       </div>
