Added edit cube functionality

--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
@@ -5,4 +5,5 @@
         <p>Likes : {{likes}}</p>
         <a class="btn" href="/cube/details/{{_id}}">Details</a>
         <a class="btn" href="/cube/like/{{_id}}">Like</a>
+        <a class="btn" href="/cube/edit/{{_id}}">Edit</a>
       </div>
