--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/cube.hbs
@@ -6,4 +6,5 @@
         <a class="btn" href="/cube/details/{{_id}}">Details</a>
         <a class="btn" href="/cube/like/{{_id}}">Like</a>
         <a class="btn" href="/cube/edit/{{_id}}">Edit</a>
+        <a class="btn" href="/accessory/attach/{{_id}}">Attach Accessory</a>
       </div>
