--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/create.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/create.hbs
@@ -1,6 +1,7 @@
 <main>
       <h1>Create</h1>
       <div class="form">
+        <h2>{{errorMsg}}</h2>
         <form action='' method="post">
           <label for="name">Name</label>
           <input type="text" id="name" name="name">
