--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
@@ -6,13 +6,15 @@
                 <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
                 <a class="btn" href="/">Back</a>
             </div>
+            {{#if accessories}}
             <h2>Accessories</h2>
             <div class="accessories">
-                <div class="accessory">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/61J8UP8pySL._SX425_.jpg" alt="stickerName">
-                    <h3>Accessory Name</h3>
-                    <p>Accessory Description</p>
-                </div>
+                {{#each accessories}}
+                    {{> accessory}}
+                {{/each}}
+                {{else}}
                 <h3 class="italic">This cube has no accessories yet...</h3>
+                {{/if}}
+                
             </div>
         </main>
