--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
@@ -6,10 +6,10 @@
                 <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
                 <a class="btn" href="/">Back</a>
             </div>
-            {{#if accessories}}
+            {{#if cube.accessories}}
             <h2>Accessories</h2>
             <div class="accessories">
-                {{#each accessories}}
+                {{#each cube.accessories}}
                     {{> accessory}}
                 {{/each}}
                 {{else}}
