Only cube's creator can edit them

--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/details.hbs
@@ -1,5 +1,5 @@
         <main>
-            <h1>Rubiks Cube</h1>
+            <h1>{{cube.name}}</h1>
             <img class="cube" src="{{cube.imgPath}}">
             <div class="details">
                 <p><span>Description:</span>{{cube.description}}</p>
