--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
@@ -17,8 +17,7 @@
         <li><a href="/cube/create">Add a Cube</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/accessory/create">Add Accessory</a></li>
-        <li><a href="/user/login">Login</a></li>
-        <li><a href="/user/register">Register</a></li>
+        <li><a href="/user/logout">Logout</a></li>
       </ul>
     </header>
         {{{body}}}
