--- a/MongoDB and Mongoose/Cubicles with Mongoose/public/css/site.css
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/public/css/site.css
@@ -105,10 +105,18 @@ button, main a.btn {
     color: white;
 }
 
+.details a.btn{
+    width: 28%;
+}
+
 button:hover {
     background-color: #0B2133;
     color: white;
     cursor: pointer;
+}
+
+a.btn:hover{
+    text-decoration: underline;
 }
 
 a {
@@ -157,6 +165,7 @@ form label {
 
 input[type=text],
 input[type=number],
+input[type=password],
 select,
 textarea {
     width: 100%;
@@ -250,28 +259,8 @@ footer {
     font-size: 20px;
 }
 
-.form {
-    background-color:hwb(203 19% 13% / 0.762);
-    padding :60px;
-    height : 300px;
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-input[type='email'],input[type='password'],input[type='text'] {
-    width: 100%;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    padding: 12px 20px 12px 12px;
-    border-radius: 0 4px 4px 4px;
-    margin: 8px 0 2em;
-}
-
 /*Animations & Transitions
 */
-
 
 @-webkit-keyframes fadeOut {
     from {
