--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/login.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/login.hbs
@@ -1,11 +1,14 @@
-<main>
-    <form class="form login" method="post">
-        <div class="form-control">
-            <input type="email" name="email" placeholder="Email" required>
-        </div>
-        <div class="form-control">
-            <input type="password" name="password" placeholder="Password" required>
-        </div>
-        <input type="submit" value="Send" class="btn btn-primary">
-    </form>
-</main>
+
+        <main>
+            <h1>Login Form</h1>
+            <div class="form">
+                <form action="#" method="POST">
+                    <label for="username">Email</label>
+                    <input type="text" id="username" name="email" required>
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </main>
