--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/authorizedCube.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/partials/authorizedCube.hbs
@@ -7,4 +7,5 @@
         <a class="btn" href="/cube/like/{{_id}}">Like</a>
         <a class="btn" href="/cube/edit/{{_id}}">Edit</a>
         <a class="btn" href="/accessory/attach/{{_id}}">Attach Accessory</a>
+        <a class="btn" href="/cube/delete/{{_id}}">Delete Cube</a>
       </div>
