--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/register.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/register.hbs
@@ -1,15 +1,18 @@
-<main>
-    <form class="form register" method="post">
-        <div class="form-control">
-            <input type="text" name="username" placeholder="Name" required>
-        </div>
-        <div class="form-control">
-            <input type="email" name="email" placeholder="Email" required>
-        </div>
-        <div class="form-control">
-            <input type="password" name="password" placeholder="Password" required>
-        </div>
-        
-        <input type="submit" value="Send" class="btn btn-primary">
-    </form>
-</main>
+
+        <main>
+            <h1>Register Form</h1>
+            <div class="form">
+                <form action="#" method="POST">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+
+                    <label for="repeatPassword">Email</label>
+                    <input type="password" id="repeatPassword" name="email" required>
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+
+                    <input type="submit" value="Register">
+                </form>
+            </div>
+        </main>
