--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/delete.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/delete.hbs
@@ -4,11 +4,11 @@
             <div class="form">
                 <form action="#" method="POST">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" value="{{name}}" disabled="true" />
+                    <input type="text" id="name" name="name" value="{{cube.name}}" disabled="true" />
                     <label for="description">Description</label>
-                    <textarea id="description" name="description" disabled="true" />{{description}}</textarea>
+                    <textarea id="description" name="description" disabled="true" />{{cube.description}}</textarea>
                     <label for="image">ImageUrl</label>
-                    <input type="text" id="image" name="imageUrl" value="{{imageUrl}}" disabled="true" />
+                    <input type="text" id="image" name="imageUrl" value="{{cube.imgPath}}" disabled="true" />
                     <label for="difficulty">Difficulty</label>
                     <select id="difficulty" name="difficultyLevel" value="" disabled="true" />
                     <option value="1">1 - Very Easy</option>
