--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/cube/details.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/cube/details.hbs
@@ -5,6 +5,10 @@
                 <p><span>Description:</span>{{cube.description}}</p>
                 <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
                 <a class="btn" href="/">Back</a>
+                {{#if isOwner}}
+                <a class="btn" href="/cube/edit/{{cube._id}}">Edit Cube</a>
+                <a class="btn" href="/cube/delete/{{cube._id}}">Delete Cube</a>
+                {{/if}}
             </div>
             {{#if cube.accessories}}
             <h2>Accessories</h2>
