--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/index.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/index.hbs
@@ -10,10 +10,7 @@
         <input type="number" name="to" class="difficulty" placeholder="Difficulty to...">
         <input type="submit" value="search">
       </form>
-      {{#each authorizedCubes}}
-        {{> authorizedCube}}
-      {{/each}}
-      {{#each unAuthorizedCubes}}
-        {{> unAuthorizedCube}}
+      {{#each cubes}}
+        {{> cube}}
       {{/each}}
     </main>
