--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
@@ -14,10 +14,15 @@
       <ul>
         <li><img class="logo" src="/images/logo.png"></li>
         <li><a href="/">Browse</a></li>
-        <li><a href="/cube/create">Add a Cube</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/accessory/create">Add Accessory</a></li>
-        <li><a href="/user/logout">Logout</a></li>
+        {{#if user}}
+            <li><a href="/cube/create">Add a Cube</a></li>
+            <li><a href="/accessory/create">Add Accessory</a></li>
+            <li><a href="/user/logout">Logout</a></li>
+          {{else}}
+            <li><a href="/user/login">Login</a></li>
+            <li><a href="/user/register">Register</a></li>
+        {{/if}}
       </ul>
     </header>
         {{{body}}}
