Implemented register functionality and fixed bug

--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/user/register.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/user/register.hbs
@@ -7,7 +7,7 @@
                     <input type="text" id="username" name="username" required>
 
                     <label for="repeatPassword">Email</label>
-                    <input type="password" id="repeatPassword" name="email" required>
+                    <input type="text" id="email" name="email" required>
 
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
