Added register validation

--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/layouts/main.hbs
@@ -25,6 +25,9 @@
         {{/if}}
       </ul>
     </header>
+        <div id="notification">
+          <p id="notification-message">{{errorsMsg}}</p>
+        </div>
         {{{body}}}
     </div>
   <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
