--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/user/register.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/user/register.hbs
@@ -12,6 +12,9 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
 
+                    <label for="password">Repeat Password</label>
+                    <input type="password" id="repeatPassword" name="repeatPassword" required>
+
                     <input type="submit" value="Register">
                 </form>
             </div>
