--- a/MongoDB and Mongoose/Cubicles with Mongoose/public/css/site.css
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/public/css/site.css
@@ -259,6 +259,19 @@ footer {
     font-size: 20px;
 }
 
+#notification {
+    margin : 0 auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    text-align: center;
+    width: 50%;
+    padding: 0.5%;
+    background-color: rgb(231, 118, 118);
+    color : white;
+    border-radius: 5px;
+    text-decoration: underline;
+}
+
 /*Animations & Transitions
 */
 
