--- a/MongoDB and Mongoose/Cubicles with Mongoose/src/views/404.hbs
+++ b/MongoDB and Mongoose/Cubicles with Mongoose/src/views/404.hbs
@@ -4,5 +4,9 @@
                 src="https://www.iconpacks.net/icons/2/free-sad-face-icon-2691-thumb.png"
                 alt="sad face" />
             <h1>404</h1>
-            <h2>Page not found</h2>
+            {{#if errMsg}}
+                <h2>{{errMsg}}</h2>
+                    {{else}}
+                <h2>Page not found</h2>
+            {{/if}}
         </main>
