--- a/MongoDB and Mongoose/Art Gallery/src/views/profile.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/profile.hbs
@@ -1,5 +1,4 @@
 
-
         <main>
             <section id="profile-page">
                 <h1>Full Profile Information</h1>
@@ -22,13 +21,9 @@
 
                     <article class="profile-card-icon">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./style/img/vip-user.png" alt="art-image1">
+                        <img src="/img/vip-user.png" alt="art-image1">
                     </article>
 
                 </article>
             </section>
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
