--- a/MongoDB and Mongoose/Art Gallery/src/views/404.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/404.hbs
@@ -1,15 +1,10 @@
 
-
         <main>
             <section id="not-found-page">
                 <div class="not-found-page-container">
                     <h1>404</h1>
                     <h2>Page Not Found</h2>
-                    <p>The Page you are looking for doesn't exist or another error occurred. Go to <a href="#">ArtGallery</a>.</p>
+                    <p>The Page you are looking for doesn't exist or another error occurred. Go to <a href="/publications/gallery">ArtGallery</a>.</p>
                 </div>
             </section>
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
