--- a/MongoDB and Mongoose/Art Gallery/src/views/create.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/create.hbs
@@ -4,7 +4,7 @@
             <section id="create-container">
                 <div class="create-container-info">
                     <!-- Do not forget to change the path to the image -->
-                    <img src="./style/img/blog-img12.jpg" alt="image">
+                    <img src="/img/blog-img12.jpg" alt="image">
 
                     <form action="#" method="" class="container-text">
 
@@ -31,7 +31,3 @@
             </section>
 
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
