--- a/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
@@ -24,13 +24,9 @@
                     </article>
 
                     <article class="details-card-image">
-                        <img src="./style/img/img-5.jpg" alt="art-image2">
+                        <img src="/img/img-5.jpg" alt="art-image2">
                     </article>
 
                 </article>
             </section>
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
