--- a/MongoDB and Mongoose/Art Gallery/src/views/edit.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/edit.hbs
@@ -3,7 +3,7 @@
             <section id="edit-container">
                 <div class="edit-container-info">
                     <!-- Do not forget to change the path to the image -->
-                    <img src="./style/img/blog-img12.jpg" alt="image">
+                    <img src="/img/blog-img12.jpg" alt="image">
 
                     <form action="#" method="" class="container-text">
                         <h2>Edit</h2>
@@ -27,7 +27,3 @@
                 </div>
             </section>
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
