--- a/MongoDB and Mongoose/Art Gallery/src/views/gallery.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/gallery.hbs
@@ -1,4 +1,5 @@
 
+
         <main>
 
             <section id="gallery">
@@ -8,7 +9,7 @@
                     <!--If there are art publications in the database, show each of them-->
                     <article class="card-info">
                         <article class="card-info-image">
-                            <img src="./style/img/blog-img14.jpg" alt="art-image">
+                            <img src="/img/blog-img14.jpg" alt="art-image">
                         </article>
                         <article class="card-info-text">
                             <h2>Title: Painting is everything</h2>
@@ -19,7 +20,7 @@
 
                     <article class="card-info">
                         <article class="card-info-image">
-                            <img src="./style/img/img-5.jpg" alt="art-image">
+                            <img src="/img/img-5.jpg" alt="art-image">
                         </article>
                         <article class="card-info-text">
                             <h2>Title: Spring in the garden</h2>
@@ -39,6 +40,3 @@
 
         </main>
 
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
