--- a/MongoDB and Mongoose/Art Gallery/src/views/layouts/main.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/layouts/main.hbs
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <title>{{title}}</title>
 </head>
 <body>
-    {{{body}}}
+    <div id="box">
+
+        <!-- In case of error, you should display div with class "error-box" -->
+        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+        <!--<div class="error-box">
+            <p>Error</p>
+        </div>-->
+
+        <nav>
+
+            <!-- Do not forget to change the path to the image -->
+            <img src="/images/art-logo.png" alt="logo">
+            <a href="/">ArtGallery</a>
+
+            <ul class="menu">
+                <li><a href="/publications">Gallery</a></li>
+                <!-- Logged users -->
+                <li><a href="/publications/create">Create Publication</a></li>
+                <li><a href="/user/profile">Profile</a></li>
+                <li><a href="#">Logout</a></li>
+                <!-- Guest users -->
+                <li><a href="/user/login">Login</a></li>
+                <li><a href="/user/register">Register</a></li>
+            </ul>
+        </nav>
+
+            {{{body}}}
+            
+        <footer>
+            © Js Back-End Retake Exam 2021
+        </footer>
+    </div>
 </body>
 </html>
