--- a/MongoDB and Mongoose/Art Gallery/src/views/login.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/login.hbs
@@ -5,7 +5,7 @@
 
                 <div class="container">
                     <!-- Do not forget to change the path to the image -->
-                    <img src="./style/img/slider.jpg" alt="image">
+                    <img src="/img/slider.jpg" alt="image">
 
                     <form action="#" method="" class="container-text">
                         <h2>Login</h2>
@@ -28,7 +28,3 @@
             </section>
 
         </main>
-
-        <footer>
-            © Js Back-End Retake Exam 2021
-        </footer>
