Made a register functionality with error handling

--- a/MongoDB and Mongoose/Art Gallery/src/views/layouts/main.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/layouts/main.hbs
@@ -12,9 +12,11 @@
 
         <!-- In case of error, you should display div with class "error-box" -->
         <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
+        {{#if err}}
+        <div class="error-box">
+            <p>{{err}}</p>
+        </div>
+        {{/if}}
 
         <nav>
 
