--- a/MongoDB and Mongoose/Art Gallery/src/views/register.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/register.hbs
@@ -1,6 +1,5 @@
 
         <main>
-
             <section id="register-container">
                 <div class="register-container-info">
                     <!-- Do not forget to change the path to the image -->
@@ -24,7 +23,7 @@
 
                         <button class="register-btn">Register</button>
                         <div class="card-no-account">
-                            <p>Already have an account?<a href="#"> Sign in</p>
+                            <p>Already have an account?<a href="/user/login"> Sign in</p>
                         </div>
 
                     </form>
