--- a/MongoDB and Mongoose/Art Gallery/src/views/partials/publication.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/partials/publication.hbs
@@ -5,6 +5,6 @@
     <article class="card-info-text">
         <h2>Title: {{title}}</h2>
         <h3>Certificate of authenticity: {{certificateOfAuthenticity}}</h3>
-        <a href="/publication/details/{{_id}}" class="details-btn">Details</a>
+        <a href="/publications/details/{{_id}}" class="details-btn">Details</a>
     </article>
 </article>
