--- a/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
@@ -13,8 +13,8 @@
                         <!-- If there is no registered user, do not display buttons-->
                         <div class="buttons">
                             <!-- Only for registered user and author of the publication -->
-                            <a href="#" class="btn-edit">Edit</a>
-                            <a href="#" class="btn-delete">Delete</a>
+                            <a href="/publications/edit/{{publication._id}}" class="btn-edit">Edit</a>
+                            <a href="/publications/delete/{{publication._id}}" class="btn-delete">Delete</a>
                             <!-- logged in user who has not yet shared the publication-->
                             <a href="#" class="btn-share">Share publication</a>
                             <!-- logged in user who has already shared the publication-->
