--- a/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
@@ -15,10 +15,14 @@
                             <!-- Only for registered user and author of the publication -->
                             <a href="/publications/edit/{{publication._id}}" class="btn-edit">Edit</a>
                             <a href="/publications/delete/{{publication._id}}" class="btn-delete">Delete</a>
-                            <!-- logged in user who has not yet shared the publication-->
-                            <a href="#" class="btn-share">Share publication</a>
+
+                            {{#if isShared}}
                             <!-- logged in user who has already shared the publication-->
                             <p class="shared-pub">You already shared this publication</p>
+                            {{else}}
+                            <!-- logged in user who has not yet shared the publication-->
+                            <a href="/publications/share/{{publication._id}}" class="btn-share">Share publication</a>
+                            {{/if}}
                         </div>
 
                     </article>
