--- a/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
+++ b/MongoDB and Mongoose/Art Gallery/src/views/details.hbs
@@ -12,9 +12,13 @@
 
                         <!-- If there is no registered user, do not display buttons-->
                         <div class="buttons">
+                            {{#if user}}
+                            {{#if isOwner}}
                             <!-- Only for registered user and author of the publication -->
                             <a href="/publications/edit/{{publication._id}}" class="btn-edit">Edit</a>
                             <a href="/publications/delete/{{publication._id}}" class="btn-delete">Delete</a>
+                            {{/if}}
+                            {{/if}}
 
                             {{#if isShared}}
                             <!-- logged in user who has already shared the publication-->
